# media-platform-python-sdk

./: .ci_config  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pom.xml  requirements.txt  requirements_local.txt  setup.cfg  setup.py  test-requirements.txt  tests.sh
.lifecycle-hooks/: image_set_rc.sh  post-rc
demo/: demo.py  extract_archive.py  get_job.py  globals.py  image_manipulation.py  live_stream.py  main.py  transcode_video.py  wait_for_result.py  wait_for_results.py
maven/assembly/: tar.gz.xml
media_platform/: __init__.py  error_code.py  media_platform_client.py
media_platform/auth/: app_authenticator.py  authenticator.py  jwt_coder.py  token.py
media_platform/configuration/: client_configuration.py  configuration.py
media_platform/exception/: bad_gateway_exception.py  conflict_exception.py  forbidden_exception.py  media_platform_exception.py  not_found_exception.py  server_error_exception.py  unauthorized_exception.py
media_platform/http/: authenticated_http_client.py  response_processor.py
media_platform/http_client/: authenticated_http_client.py  response_processor.py
media_platform/job/: convert_font_job.py  convert_font_job_group.py  create_archive_job.py  extract_archive_job.py  extract_poster_job.py  extract_poster_job_group.py  extract_storyboard_job.py  extract_storyboard_job_group.py  image_operation_job.py  import_file_job.py  job.py  job_callback_payload.py  job_deserializer.py  job_group.py  job_type.py  replace_extra_metadata_job.py  scan_file_job.py  scan_file_job_group.py  (+5 more)
tests/: test_client.py
(+235 files in other folders)
