[bdist_wheel]
universal=0

[metadata]
name = wix_media_platform
author = Wix Media Platform
author-email = mcloud@wix.com
summary= Wix Media Platform python SDK
home-page = https://github.com/wix/media-platform-python-sdk
license = BSD
description-file =
    README.md
requires-python = >= 2.7
classifier=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:

[files]
packages =
    media_platform